unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Geo_Left_Column_Field_1__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Geo_Left_Column_Field_1__c</fullName>
    <description>This field contains the api name of the field used for the left column position 1 in the geo-location view.</description>
    <inlineHelpText>This field contains the api name of the field used for the left column position 1 in the geo-location view.</inlineHelpText>
    <label>Position 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>