unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Geo_Left_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Geo_Left_Column_Name__c</fullName>
    <description>This field contains the api name of the field used for the name position in the geo-location view.</description>
    <inlineHelpText>This field contains the api name of the field used for the name position in the geo-location view.</inlineHelpText>
    <label>Position 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>