unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Geo_Left_Column_Name_Label__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Geo_Left_Column_Name_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field displays the field label to users in the directory.</description>
    <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
    <label>Position 1 Label</label>
    <type>Checkbox</type>
</CustomField>