unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Geo_Longitude__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Geo_Longitude__c</fullName>
    <description>Corresponding Longitude field for the primary object</description>
    <inlineHelpText>Corresponding Longitude field for the primary object</inlineHelpText>
    <label>Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>