unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Heading_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Heading_Color__c</fullName>
    <description>Color of all heading text.</description>
    <inlineHelpText>Color of all heading text.</inlineHelpText>
    <label>Heading Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>