unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Hero_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Hero_Text_Color__c</fullName>
    <description>Color used for the directory banner text.</description>
    <inlineHelpText>Color used for the directory banner text.</inlineHelpText>
    <label>Search Bar Text Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>