unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Is_Parent__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Is_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify the Parent Directories. When checked, this will be considered for Primary object</description>
    <inlineHelpText>To identify the Parent Directories. When checked, this will be considered for Primary object</inlineHelpText>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>