unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Link_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Link_Color__c</fullName>
    <description>Color of all text links.</description>
    <inlineHelpText>Color of all text links.</inlineHelpText>
    <label>Link Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>