unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Link_Highlight_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Link_Highlight_Color__c</fullName>
    <description>Highlight color of all text links.</description>
    <inlineHelpText>Highlight of all text links.</inlineHelpText>
    <label>Link Highlight Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>