unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Logo__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Logo__c</fullName>
    <description>Defines the image path for the logo to be displayed in the directory.</description>
    <inlineHelpText>Defines the image path for the logo to be displayed in the directory.</inlineHelpText>
    <label>Logo</label>
    <type>Url</type>
</CustomField>