unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Name_Field__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Name_Field__c</fullName>
    <description>This field contains the api name of the field used for the name position in the detail view.</description>
    <inlineHelpText>This field contains the api name of the field used for the name position in the detail view.</inlineHelpText>
    <label>Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>