unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__NavBar_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__NavBar_Background_Color__c</fullName>
    <description>Background color of the detail navigation bar.</description>
    <inlineHelpText>Background color of the detail navigation bar.</inlineHelpText>
    <label>NavBar Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>