unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__NavBar_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__NavBar_Text_Color__c</fullName>
    <description>Text color of the directories filter bar and detail navigation bar.</description>
    <inlineHelpText>Text color of the directories filter bar and detail navigation bar.</inlineHelpText>
    <label>NavBar Text Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>