unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__NavBar_Text_Color_Highlight__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__NavBar_Text_Color_Highlight__c</fullName>
    <description>Text highlight color of the directories filter bar and detail navigation bar.</description>
    <inlineHelpText>Text highlight color of the directories filter bar and detail navigation bar.</inlineHelpText>
    <label>NavBar Highlight Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>