unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Navigation_Button_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Navigation_Button_Background_Color__c</fullName>
    <description>Background color of the navigation buttons.</description>
    <inlineHelpText>Background color of the navigation buttons.</inlineHelpText>
    <label>Navigation Button Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>