unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Object__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Object__c</fullName>
    <description>Define the API name of the object to be displayed in the directory.</description>
    <inlineHelpText>Define the API name of the object to be displayed in the directory.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>