unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Order__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Order__c</fullName>
    <description>This field defines the order in which related lists are presented on the detail page.</description>
    <inlineHelpText>This field defines the order in which related lists are presented on the detail page.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>