unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Parent_Directory__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Parent_Directory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to the parent directory</description>
    <inlineHelpText>Linked to the parent directory</inlineHelpText>
    <label>Parent Directory</label>
    <referenceTo>DRCTS__Directories__c</referenceTo>
    <relationshipLabel>Directories</relationshipLabel>
    <relationshipName>Directories</relationshipName>
    <type>Lookup</type>
</CustomField>