unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Primary_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Primary_Button_Color__c</fullName>
    <description>Background color of all primary buttons.</description>
    <inlineHelpText>Background color of all primary buttons.</inlineHelpText>
    <label>Primary Button Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>