unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Primary_Button_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Primary_Button_Text_Color__c</fullName>
    <description>Text color of all primary buttons.</description>
    <inlineHelpText>Text color of all primary buttons.</inlineHelpText>
    <label>Primary Button Text Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>