unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Profile_Fields__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Profile_Fields__c</fullName>
    <description>This field contains the api names of the fields used for the detail view.</description>
    <inlineHelpText>This field contains the api names of the fields used for the detail view.</inlineHelpText>
    <label>Profile Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>