unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Radius_Values__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Radius_Values__c</fullName>
    <description>This field contains the numerical values (CSV) to be presented as options to refine my search.</description>
    <inlineHelpText>This field contains the numerical values (CSV) to be presented as options to refine my search.</inlineHelpText>
    <label>Radius Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>