unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Record_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Record_Text_Color__c</fullName>
    <description>Color of return record text. Valid hexadecimal notation required.</description>
    <inlineHelpText>Color of return record text. Valid hexadecimal notation required.</inlineHelpText>
    <label>Record Text Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>