unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Related_List_Filter__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Related_List_Filter__c</fullName>
    <description>This field contains the filter for the related lists.</description>
    <inlineHelpText>This field contains the filter for the related lists.</inlineHelpText>
    <label>Related List Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>