unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Relationship_Name__c</fullName>
    <description>** System calculated ** This field contains the relationship name of the related lists.</description>
    <inlineHelpText>** System calculated ** This field contains the relationship name of the related lists.</inlineHelpText>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>