unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Restrict_Access_to_Authenticated_User__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Restrict_Access_to_Authenticated_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the directory will be visible to only authenticated users navigating to the directory URL.</description>
    <inlineHelpText>When checked the directory will be visible to only authenticated users navigating to the directory URL.</inlineHelpText>
    <label>Restrict Access to Authenticated User</label>
    <type>Checkbox</type>
</CustomField>