unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Search_Bar_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Search_Bar_Background_Color__c</fullName>
    <description>Background color of the search bar.</description>
    <inlineHelpText>Background color of the search bar.</inlineHelpText>
    <label>Search Bar Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>