unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Search_Fields__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Search_Fields__c</fullName>
    <description>This field contains text field names (CSV) available for searches.</description>
    <inlineHelpText>This field contains text field names (CSV) available for searches.</inlineHelpText>
    <label>Search Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>