unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Show_Field_Labels__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Show_Field_Labels__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, it will show the field labels for all the fields the user drags and drops for the additional fields component in the detail view.</description>
    <inlineHelpText>If checked, it will show the field labels for all the fields the user drags and drops for the additional fields component in the detail view.</inlineHelpText>
    <label>Show Field Labels</label>
    <type>Checkbox</type>
</CustomField>