unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Sort_Fields__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Sort_Fields__c</fullName>
    <description>This field contains the api names (CSV) of the fields used to sort the results in the geo-location and enhanced list views.</description>
    <inlineHelpText>This field contains the api names (CSV) of the fields used to sort the results in the geo-location and enhanced list views.</inlineHelpText>
    <label>Sort Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>