unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Text_Color__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Text_Color__c</fullName>
    <description>Color of return record text</description>
    <inlineHelpText>Color of return record text</inlineHelpText>
    <label>Text Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>