unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Tile_Action_Button_Field__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Tile_Action_Button_Field__c</fullName>
    <description>Select the appropriate action button field.</description>
    <inlineHelpText>Select the appropriate action button field.</inlineHelpText>
    <label>Action Button Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>