unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Tile_Action_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Tile_Action_Button_Label__c</fullName>
    <description>Enter the text to display on the action button. Limited to 10 characters.</description>
    <inlineHelpText>Enter the text to display on the action button. Limited to 10 characters.</inlineHelpText>
    <label>Action Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>