unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Tile_Enable_Action_Button__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Tile_Enable_Action_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this will enable the action button on the front end.</description>
    <inlineHelpText>When checked, this will enable the action button on the front end.</inlineHelpText>
    <label>Enable Action Button</label>
    <type>Checkbox</type>
</CustomField>