unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Tile_Image_Field__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Tile_Image_Field__c</fullName>
    <description>This field contains the api name of the image field to be displayed in the Tile List view.</description>
    <inlineHelpText>This field contains the api name of the image field to be displayed in the Tile List view.</inlineHelpText>
    <label>Image Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>