unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Tile_List_Display_Results__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Tile_List_Display_Results__c</fullName>
    <description>The value entered in this field is the number of results returned for each page on the Tile List view.</description>
    <inlineHelpText>The value entered in this field is the number of results returned for each page on the Tile List view.</inlineHelpText>
    <label>Display Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>