unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Tile_Placeholder_Image__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Tile_Placeholder_Image__c</fullName>
    <description>Browse for files or paste in a URL.</description>
    <inlineHelpText>Browse for files or paste in a URL.</inlineHelpText>
    <label>Placeholder Image</label>
    <type>Url</type>
</CustomField>