unpackaged/main/default/objects/DRCTS__Directories__c/fields/DRCTS__Tile_Position_Field_3__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Tile_Position_Field_3__c</fullName>
    <description>This field contains the api name of the field used for the position 3 in the Tile List view.</description>
    <inlineHelpText>This field contains the api name of the field used for the position 3 in the Tile List view.</inlineHelpText>
    <label>Position Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>