unpackaged/main/default/objects/DRCTS__Directories__c/fields/FON_Lightning_Directory_URL__c.field-meta.xml
<CustomField>
    <fullName>FON_Lightning_Directory_URL__c</fullName>
    <formula>&#39;https://tchfull-us-tdm-tso-15eb63ff4c6-1626e-16e1cffda8f.cs43.force.com/LightningMemberPortal/s/searchdirectory?id=&#39; + Id</formula>
    <label>Lightning Directory URL</label>
    <type>Text</type>
</CustomField>