unpackaged/main/default/objects/DRCTS__Directories__c/listViews/DRCTS__All.listView-meta.xml
<ListView>
    <fullName>DRCTS__All</fullName>
    <columns>NAME</columns>
    <columns>Directory_URL__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>DRCTS__Description__c</columns>
    <columns>DRCTS__Display_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>