unpackaged/main/default/objects/DRCTS__Directories__c/listViews/DRCTS__Parent_Directories.listView-meta.xml
<ListView>
    <fullName>DRCTS__Parent_Directories</fullName>
    <columns>NAME</columns>
    <columns>DRCTS__Object__c</columns>
    <columns>DRCTS__Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DRCTS__Is_Parent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Parent Directories</label>
</ListView>