unpackaged/main/default/objects/DRCTS__Directories__c/listViews/ECCHO_Directories.listView-meta.xml
<ListView>
    <fullName>ECCHO_Directories</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>FON</value>
    </filters>
    <label>ECCHO Directories</label>
</ListView>